--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
+
+#dome commite for the code coverage test is running are not
+
 # database init, supports mysql too
 database=h2
 spring.sql.init.schema-locations=classpath*:db/${database}/schema.sql
