--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 
 #dome commite for the code coverage test is running are not
+#senond check for code coverage
 
 # database init, supports mysql too
 database=h2
