--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,4 @@
 sonar.projectKey=javatest
 sonar.sources=.
 sonar.host.url=http://157.66.191.31:9000
+-Dsonar.login="82181670069c16e279bd2ea91751aca8e9a1f076"
