--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,4 +1,4 @@
-#commite jdk17 add in dockerfile
+#commite jdk17 add in dockerfile  ghvdhvdjbj
 sonar.projectKey=javatest
 sonar.sources=.
 sonar.host.url=http://157.66.191.31:9000
