--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,14 @@
         -DnewVersion=... -->
     <project.build.outputTimestamp>2024-11-28T14:37:52Z</project.build.outputTimestamp>
 
+    <distributionManagement>
+      <repository>
+         <id>nexus</id>
+         <url>http://157.66.191.31:8081/repository/custom_maven2_hosted/</url>
+     </repository>
+    </distributionManagement>
+
+
     <!-- Web dependencies -->
     <webjars-locator.version>1.0.1</webjars-locator.version>
     <webjars-bootstrap.version>5.3.3</webjars-bootstrap.version>
