--- a/pom.xml
+++ b/pom.xml
@@ -25,12 +25,14 @@
         -DnewVersion=... -->
     <project.build.outputTimestamp>2024-11-28T14:37:52Z</project.build.outputTimestamp>
 
-    <distributionManagement>
-      <repository>
-         <id>nexus</id>
-         <url>http://157.66.191.31:8081/repository/custom_maven2_hosted/</url>
-     </repository>
-    </distributionManagement>
+<distributionManagement>
+    <repository>
+        <id>nexus</id>
+        <name>Nexus Release Repository</name>
+        <url>http://157.66.191.31:8081/repository/custom_maven2_hosted/</url>
+    </repository>
+</distributionManagement>
+
 
 
     <!-- Web dependencies -->
