--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 
 #dome commite for the code coverage test is running are not
 #senond check for code coverage  jdk 17
+crash.enabled=false
 
 # database init, supports mysql too
 database=h2
